--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				</div>
 				<div class="col-md-8 header-right">
 					<h2>Hello</h2>
-					<h1>I'm Yiliang Yuan （袁谊亮）</h1>
-					<h6>undergraduate student from USTC</h6>
+					<h1>I'm Xie Jiahang（谢佳航）</h1>
+					<h6>undergraduate student from XJTU</h6>
 					<ul class="address">
 						<li>
 							<ul class="address-text">
@@ -77,13 +77,13 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<li>
 							<ul class="address-text">
 								<li><b>E-MAIL </b></li>
-								<li><a href="mailto:yuanyl@mail.ustc.edu.cn"> yuanyl@mail.ustc.edu.cn</a></li>
+								<li><a href="mailto:xiejiahang@stu.xjtu.edu.cn"> xiejiahang@stu.xjtu.edu.cn</a></li>
 							</ul>
 						</li>
 						<li>
 							<ul class="address-text">
 								<li><b>WEBSITE </b></li>
-								<li><a href="http://home.ustc.edu.cn/~yuanyl">home.ustc.edu.cn/~yuanyl</a></li>
+								<li><a href="https://xie-jiahang.github.io/">https://xie-jiahang.github.io/</a></li>
 							</ul>
 						</li>
 					</ul>
