--- a/index.html
+++ b/index.html
@@ -59,19 +59,19 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<li>
 							<ul class="address-text">
 								<li><b>PHONE </b></li>
-								<li>+86 133-9088-6431</li>
+								<li>+86 13812751771</li>
 							</ul>
 						</li>
 						<li>
 							<ul class="address-text">
 								<li><b>D.O.B</b></li>
-								<li>04-1997</li>
+								<li>02-1999</li>
 							</ul>
 						</li>
 						<li>
 							<ul class="address-text">
 								<li><b>ADDRESS </b></li>
-								<li>No. 96 Jinzhai Road, Hefei, Anhui, China</li>
+								<li>Xianning West Road, Xi’an, Shaanxi, 710049, P.R.China</li>
 							</ul>
 						</li>
 						<li>
@@ -733,7 +733,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<!-- Bootstrap core JavaScript
 		================================================== -->
 		<!-- Placed at the end of the document so the pages load faster -->
-		<script src="js/bootstrap.js"></script>
+		
 	
 
 </body>
