--- a/index.html
+++ b/index.html
@@ -111,7 +111,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<li><a href="#skills" class="scroll">Skills</a></li>
 						<li><a href="#projects" class="scroll">My Projects</a></li>
 						<li><a href="#contact" class="scroll">Contact</a></li>
-						<!--<li><a href="http://mp.weixin.qq.com/s/t_A5jYivll4s25lsxNgUEA">My Love</a></li>-->
 					</ul>
 					<div class="clearfix"> </div>
 				</div>
@@ -124,16 +123,14 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<div class="container">
 			<h3 class="title"> About Me</h3>
 			<div class="col-md-8 about-left">
-				<p>I am an undergraduate student majoring in Computer Science, form USTC, University of Science and Technology of China. I am insterested in algorithms，math and computer technology. I did some research on social network, more specifically, information distributing and commun in a network. Now, I am doing some research on algorithms in the field of cloud computing. Also, I am always trying to learn something about computability theory and computational complexity theory. Recently, I am learning something about approximate algorithms of NP-Hard Problem.</p>
-				<p>I also have some insterest in Cognitive Science, all the talks on this field is welcome. I noticed that neural network made great success in Machine Learning. Hopely, research in this field will lead to the Strong Artificial Intelligence. </p>
+				<p>After being recruited into university, I gradually adapted to new learning strategy and persevered. On the flip side, I am always courageous to embrace challenges and the unknown. I have explicit plans for my prospect. As a class leader, I helped in organization of collective activities. As a trustworthy friend for my classmates to pour out their emotions, I am a dedicated listener. I have an extroverted and optimistic personality. Being a team player, I am supportive of our work and help keep the whole process on track. I display great curiosity and attempt to fit my diverse experiences into a clear understanding of the world. </p>
 			</div>
 			<div class="col-md-4 about-right">
 				<ul>
 					<h5>Awards</h5>
-					<li><span class="glyphicon glyphicon-menu-right"></span> ACM-ICPC silival award(regional competition)</li>
-					<li><span class="glyphicon glyphicon-menu-right"></span> IGEM gold award (group work)</li>
-					<li><span class="glyphicon glyphicon-menu-right"></span> USTC Student Award- gold award</li>
-					<li><span class="glyphicon glyphicon-menu-right"></span> USTC Student Award for freshmen</li>
+					<li><span class="glyphicon glyphicon-menu-right"></span> National College students Mathematics Competition NonMathematical Provincial second Prize</li>
+					<li><span class="glyphicon glyphicon-menu-right"></span> Siyuan scholarship</li>
+					<li><span class="glyphicon glyphicon-menu-right"></span> Excellent student in Nanyang</li>
 				</ul>
 				<div class="clearfix"> </div>
 			</div>
@@ -151,47 +148,27 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				</div>
 				<div class="col-md-6 work-right"> 
 					<h5><span class="glyphicon glyphicon-briefcase"> </span>  TO BE CONTINUE</h5>
-					<p>My work of building my homepage was interrupted because of less of time</p>
+					<p>My work of building my homepage was interrupted because of lack of time</p>
 				</div>
 				<div class="clearfix"> </div>
 			</div>
 			<div class="work-info"> 
 				<div class="col-md-6 work-left"> 
-					<h4> 2015 </h4>
+					<h4> 2016-present </h4>
 				</div>
 				<div class="col-md-6 work-right"> 
-					<h5><span class="glyphicon glyphicon-briefcase"> </span> major in CS</h5>
-					<p>After consideration, I choose Computer Science as my major in the college.</p>
+					<h5><span class="glyphicon glyphicon-briefcase"> </span> Undergraduate</h5>
+					<p>undergraduate student, Majoring in Electrical Engineering, in Xi'an Jiaotong University</p>
 				</div>
 				<div class="clearfix"> </div>
 			</div>
 			<div class="work-info"> 
 				<div class="col-md-6 work-left"> 
-					<h4> 2014 </h4>
-				</div>
-				<div class="col-md-6 work-right"> 
-					<h5><span class="glyphicon glyphicon-briefcase"> </span> major in CS</h5>
-					<p>After consideration, I choose Computer Science as my major in the college.</p>
-				</div>
-				<div class="clearfix"> </div>
-			</div>
-			<div class="work-info"> 
-				<div class="col-md-6 work-left"> 
-					<h4>2014 </h4>
-				</div>
-				<div class="col-md-6 work-right"> 
-					<h5><span class="glyphicon glyphicon-briefcase"></span> Undergraduate student  </h5>
-					<p> I get into USTC, SCGY(special school for gifited young), study as an Undergraduate</p>
-				</div>
-				<div class="clearfix"> </div>
-			</div>
-			<div class="work-info"> 
-				<div class="col-md-6 work-left"> 
-					<h4> - 2014 </h4>
+					<h4> - 2016 </h4>
 				</div>
 				<div class="col-md-6 work-right"> 
 					<h5><span class="glyphicon glyphicon-briefcase"></span>  high-school  </h5>
-					<p> I spend two years to finish my high school classes in XingHai Middle School, Soochow.</p>
+					<p> I spend three years to finish my high school classes in XingHai Middle School, Soochow.</p>
 				</div>
 				<div class="clearfix"> </div>
 			</div>
@@ -211,41 +188,31 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<div class="progress-bar progress-bar-striped active" style="width: 80%">
 						</div>
 					</div>
-					<h6>UI DESIGN & DEVELOPER <span> 70% </span></h6>
+					<h6>Android application development <span> 70% </span></h6>
 					<div class="progress">
 						<div class="progress-bar progress-bar-striped active" style="width: 70%">
 						</div>
 					</div>
-					<h6>HTML/CSS<span>90% </span></h6>
-					<div class="progress">
-						<div class="progress-bar progress-bar-striped active" style="width: 90%">
-						</div>
-					</div>
-					<h6>PHOTOSHOP <span> 75% </span></h6>
+					<h6>Web development<span>75% </span></h6>
 					<div class="progress">
 						<div class="progress-bar progress-bar-striped active" style="width: 75%">
 						</div>
 					</div>
-				</div>
-				<div class="col-md-6 bar-grids">
-					<h6>PROJECT MANAGEMENT <span> 85% </span></h6>
-					<div class="progress">
-						<div class="progress-bar progress-bar-striped active" style="width: 85%">
-						</div>
-					</div>
-					<h6>SOCIAL MEDIA MARKETING<span> 95% </span></h6>
-					<div class="progress">
-						<div class="progress-bar progress-bar-striped active" style="width: 95%">
-						</div>
-					</div>
-					<h6>UX DEVELOPER<span>80% </span></h6>
+					<h6>algorithm and data structure <span> 80% </span></h6>
 					<div class="progress">
 						<div class="progress-bar progress-bar-striped active" style="width: 80%">
 						</div>
 					</div>
-					<h6>PHP DESIGN<span> 60% </span></h6>
+				</div>
+				<div class="col-md-6 bar-grids">
+					<h6>C++ Programming <span> 90% </span></h6>
 					<div class="progress">
-						<div class="progress-bar progress-bar-striped active" style="width: 60%">
+						<div class="progress-bar progress-bar-striped active" style="width: 90%">
+						</div>
+					</div>
+					<h6>ability of cooperation<span> 95% </span></h6>
+					<div class="progress">
+						<div class="progress-bar progress-bar-striped active" style="width: 95%">
 						</div>
 					</div>
 				</div>
@@ -259,21 +226,21 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<h3 class="title">Education</h3>
 			<div class="work-info"> 
 				<div class="col-md-6 work-left"> 
-					<h4>Bachelor Degree - 2014</h4>
+					<h4>Bachelor Degree - 2016</h4>
 				</div>
 				<div class="col-md-6 work-right"> 
-					<h5><span class="glyphicon glyphicon-education"> </span> USTC</h5>
-					<p>from 2014 to present</p>
+					<h5><span class="glyphicon glyphicon-education"> </span> XJTU</h5>
+					<p>from 2016 to present</p>
 				</div>
 				<div class="clearfix"> </div>
 			</div>
 			<div class="work-info"> 
 				<div class="col-md-6 work-right work-right2"> 
-					<h4>high school- 2012</h4>
+					<h4>high school- 2013</h4>
 				</div>
 				<div class="col-md-6 work-left work-left2"> 
 					<h5> Suzhou Xinghai High School<span class="glyphicon glyphicon-education"></span></h5>
-					<p>from 2012 to 2014 </p>
+					<p>from 2013 to 2016 </p>
 				</div>
 				<div class="clearfix"> </div>
 			</div>
@@ -563,12 +530,13 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
         				var geoCoordMap = {
         					"Hefei":[117.27,31.86],
+        					"Xi'an":[108.95 ,34.27],
         					"武汉":[114.31,30.52],
         					"大庆":[125.03,46.58]
         				};
 
         				var data = [
-        				{name: "Hefei", value: "Hefei, Anhui, China"}
+        				{name: "Xi'an", value: "Xi'an, Shaanxi, China"}
         				];
 
         				var convertData = function (data) {
@@ -622,7 +590,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
         						map: 'china',
         						left: '10',
         						right: '35%',
-        						center: [117.98561551896913, 31.205000490896193],
+        						center: [108.95 ,34.27],
         						zoom: 1.7,
         						label: {
         							emphasis: {
@@ -674,8 +642,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
         					}
         					]
         				};
-
-
         // 使用刚指定的配置项和数据显示图表。  
         myChart.setOption(option);  
     </script>  
@@ -684,11 +650,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 </div>
 <div class="col-md-6 contact-right">
 	<div class="address-left">
-		<p>Room 432,Building 221<br>No. 96 Jinzhai Road, Hefei, Anhui, China</p>
+		<p>Xianning West Road, Xi’an, Shaanxi, 710049, P.R.China</p>
 	</div>
 	<div class="address-right">
-		<p>Call me :  +86 13390886431</p>
-		<p>E-mail : <a href="mailto:yuanyl@mail.ustc.edu.cn">yuanyl@mail.ustc.edu.cn</a></p>
+		<p>Call me :  +(86)13812751771</p>
+		<p>E-mail : <a href="mailto:xiejiahang@stu.xjtu.edu.cn">xiejiahang@stu.xjtu.edu.cn</a></p>
 	</div>
 	<div class="clearfix"></div>
 	<div class="contact-form">
@@ -710,7 +676,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!--footer-->
 <div class="footer">
 	<div class="container">
-		<p>© 2016 My Resume. All rights reserved | Design by <a href="http://w3layouts.com">W3layouts</a></p>
+		<p> All rights reserved | Design by Xie Jiahang</p>
 	</div>
 </div>
 <!--//footer-->
